[gd_scene load_steps=15 format=2]

[ext_resource path="res://Assets/Levels/Central_hub/World_objects/CauldronDweller/Jur/Lid.png" type="Texture" id=1]
[ext_resource path="res://Assets/Levels/Central_hub/World_objects/Lovers/KissSpirit-Sheet.png" type="Texture" id=2]
[ext_resource path="res://Assets/Levels/Central_hub/World_objects/CauldronDweller/Jur/Jur.png" type="Texture" id=3]
[ext_resource path="res://Assets/effects/Particles/ShineSprincles.png" type="Texture" id=4]
[ext_resource path="res://Project/WorldObjects/Technical/DialogController/DialogController.tscn" type="PackedScene" id=5]
[ext_resource path="res://Project/Levels/Central_hab/World_objects/Lovers/KissSpirit/KissSpirit.gd" type="Script" id=6]

[sub_resource type="Animation" id=1]
resource_name = "Animate"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Heart/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Heart/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Animate"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -21 ), Vector2( -2, -23 ), Vector2( 0, -25 ), Vector2( 2, -23 ), Vector2( 0, -21 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:rotation_degrees")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -3.0, 3.0, 0.0 ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -21 ) ]
}

[sub_resource type="CanvasItemMaterial" id=10]
particles_animation = true
particles_anim_h_frames = 4
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Gradient" id=11]
offsets = PoolRealArray( 0, 0.35461, 0.562648, 1 )
colors = PoolColorArray( 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=9]
gradient = SubResource( 11 )

[sub_resource type="ParticlesMaterial" id=12]
emission_shape = 1
emission_sphere_radius = 15.0
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
color_ramp = SubResource( 9 )
anim_speed = 2.0
anim_speed_random = 1.0
anim_offset_random = 1.0

[node name="KissSpirit" type="Node2D"]
script = ExtResource( 6 )

[node name="Heart" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="Heart"]
position = Vector2( 0, -21 )
texture = ExtResource( 2 )
hframes = 5

[node name="SpriteAnimationPlayer" type="AnimationPlayer" parent="Heart"]
root_node = NodePath("../..")
autoplay = "Animate"
anims/Animate = SubResource( 1 )
anims/RESET = SubResource( 2 )

[node name="MotionAnimationPlayer" type="AnimationPlayer" parent="Heart"]
anims/Animate = SubResource( 3 )
anims/RESET = SubResource( 4 )

[node name="ShineParticles2D" type="Particles2D" parent="Heart"]
material = SubResource( 10 )
position = Vector2( 0, -21 )
amount = 2
lifetime = 0.5
preprocess = 1.0
randomness = 1.0
process_material = SubResource( 12 )
texture = ExtResource( 4 )

[node name="JurComponents" type="Node2D" parent="."]
visible = false

[node name="Lid" type="Sprite" parent="JurComponents"]
texture = ExtResource( 1 )

[node name="Jur" type="Sprite" parent="JurComponents"]
texture = ExtResource( 3 )

[node name="DialogController" parent="." instance=ExtResource( 5 )]
dialogId = "the_first_kiss_spirit_dislog"
interaction_popup_label_text = "Осмотреть"

[node name="InteractionPopup" parent="DialogController" index="0"]
position = Vector2( 0, -17 )

[node name="DialogTextBoxController" parent="DialogController" index="2"]
position = Vector2( 1, -34 )

[editable path="DialogController"]
